--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
     <h1>Animation is Fun!</h1>
     <p>The w3-animate-top class slides in an element from the top.</p>
 
-    <!-- Funktionsaufruf js 'hello' -->
-    <button onclick="hello(),count()">Click Here</button>
+    <!-- Funktionsaufruf js 'count' -->
+    <button onclick="reset()">RESET</button>
+    <button onclick="count()">COUNTER</button>
+    <button onclick="hello()">HELLO</button>
     
   </div>
 </div>
@@ -282,6 +284,6 @@
   </div>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
-<script src="js/script.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
