--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <h1>Animation is Fun!</h1>
     <p>The w3-animate-top class slides in an element from the top.</p>
 
-    <!-- Funktionsaufruf js 'count' -->
+    <!-- Funktionsaufruf js 'button' -->
     <button onclick="reset()">RESET</button>
     <button onclick="count()">COUNTER</button>
     <button onclick="hello()">HELLO</button>
