--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
     <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">MY <span class="w3-hide-small">WEBSITE</span> LOGO</span>
   </div>
   <div class="w3-container w3-center w3-animate-top">
-    <h1>Animation is Fun!</h1>
+    <h1 id = anim >Animation is Fun!</h1>
     <p>The w3-animate-top class slides in an element from the top.</p>
 
     <!-- Funktionsaufruf js 'button' -->
-    <button onclick="reset()">RESET</button>
-    <button onclick="count()">COUNTER</button>
-    <button onclick="hello()">HELLO</button>
+    <button id = reset onclick="reset()">RESET</button>
+    <button id = count onclick="count()">COUNTER</button>
+    <button id = hello onclick="hello()">HELLO</button>
     
   </div>
 </div>
